# webcli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish-pypi.yml
extension/: README.md  manifest.json  package-lock.json  package.json  popup.html  popup.js  vite.config.ts
extension/src/: background.ts  cdp.ts  identity.ts  protocol.ts
skills/webcli/: SKILL.md
src/: browser_actions.py  browser_js.py  browser_runner.py  main.py  protocol.py  webcli_main.py
src/bridege/: __init__.py  bridge_cli.py  bridge_client.py  bridge_server.py
src/browser_cli/: __init__.py  browser_cli_dialog.py  browser_cli_get.py  browser_cli_interact.py  browser_cli_misc.py  browser_cli_tab.py
